# ComicForeground

./: .gitignore  experiment.ipynb  pyproject.toml
