[tool.poetry]
name = "comicforeground"
version = "0.1.0"
description = ""
authors = ["azurata <git@azurata.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^6.5.3"
opencv-python = "^4.7.0.72"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
